Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,20 +30,15 @@
         <h3>
 <a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng Klub at UOIT &amp; DC</h3>
 
-<p>We give you access to student run open hardware library similar to EE Work bench. It has high end oscilloscopes, solder stations, software tools, and many <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">EE prototyping</a> as [current inventory of parts], tools &amp; boards][#inventory]. Over September more equipment will be added as shown in future inventory.</p>
+<p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays, 11:30 a.m. - 1:30 p.m.</strong> and <strong>Wednesdays, 11:30 a.m. - 1:30 p.m., 2:10 p.m - 6:10 p.m.</strong></p>
 
-<p>We share office with McNaughton Center, at ACE 4020. We hold meetings every week: <strong>Tuesdays, 11:30 a.m. - 1:30 p.m.</strong> and <strong>Wednesdays, 11:30 a.m. - 1:30 p.m., 2:10 p.m - 6:10 p.m.</strong> As beginner you will learn to build electronics and software. Use <a href="http://nextproject.ca/pages.php?p=students">past projects</a> as inspiration to get started right now.</p>
+<p>All our and our partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
-<p>We provide you with all parts you need. Any part SEEK doesn't carry, McNaughton Center's current inventory of parts library should carry. In case they do not, you can order parts at SEEK or McNaughton Center by sending a "what is it's name and part number, where can it be bought, how much is it, why needed" 4 sentence e-mail to SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em></p>
-
-<p>We mentor you to go from beginner to pro. Everything is free to use. You have freedom as pro or beginner to make and hack electronics and software. This way you make and prototype real world products and device of electrical, software engineering.</p>
+<p>Any part you need but <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> or <a href="#">McNaughton Center</a> does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
 <p>Our team is always there for you. Please contact SEEK's Exec. <em><a href="mailto:SagarMonkeyBoy@gmail.com">SagarMonkeyBoy@gmail.com</a></em> with your questions.</p>
 
 <p>People who are really serious about software should make their own hardware — Alan Kay</p>
-
-<hr><h1>
-<a name="current-inventory--current-inventory" class="anchor" href="#current-inventory--current-inventory"><span class="octicon octicon-link"></span></a>Current Inventory # {#current-inventory}</h1>
 
 <hr><h1>
 <a name="for-your-information" class="anchor" href="#for-your-information"><span class="octicon octicon-link"></span></a>For Your Information</h1>
