--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays, 11:30 a.m. - 1:30 p.m.</strong> and <strong>Wednesdays, 11:30 a.m. - 1:30 p.m., 2:10 p.m - 6:10 p.m.</strong></p>
 
-<p>All our and our partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
+<p>Our and partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
 <p>Any part you need but <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> or <a href="#">McNaughton Center</a> does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
@@ -58,13 +58,6 @@
 
 <p>People who are really serious about software should make their own hardware — Alan Kay</p>
 
-<hr><h1>
-<a name="for-your-information" class="anchor" href="#for-your-information"><span class="octicon octicon-link"></span></a>For Your Information</h1>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
       </section>
 
       <footer>
