--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="stylesheets/core.css" media="screen">
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=
+Tangerine">
+    
+    <style>
+    p.quote{text-align: center; font-family: 'Tangerine', serif; font-size: 2.4em;}
+    .banner {margin: 0 auto 0 auto;}
+    </style>
 
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +24,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Seekuoitdc.github.io by seekuoitdc</title>
+    <title>Soft and Elec Eng. Club</title>
   </head>
 
   <body>
@@ -28,7 +35,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Seekuoitdc.github.io</h1>
-            <h2>Website (viewable at seekuoitdc.github.io in your browser) of Software and Electrical Engineering Klub at UOIT DC.</h2>
+            <h2>Free workshops, resources by student club on campus for Embedded Systems, FPGA, Arduino, Raspberry Pi, Digital and Analog Design, Firmware and Device Drivers, Software Engineering</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -46,9 +53,11 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng Klub at UOIT &amp; DC</h3>
+<a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng. Klub at UOIT &amp; DC</h3>
 
-<p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays, 11:30 a.m. - 1:30 p.m.</strong> and <strong>Wednesdays, 11:30 a.m. - 1:30 p.m., 2:10 p.m - 6:10 p.m.</strong></p>
+<div class="banner"><img src="images/software-electronics-heroes.gif"></div>
+
+<p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020 and <strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</p>
 
 <p>Our and partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
@@ -56,7 +65,7 @@
 
 <p>Our team is always there for you. Please contact SEEK's Exec. <em><a href="mailto:SagarMonkeyBoy@gmail.com">SagarMonkeyBoy@gmail.com</a></em> with your questions.</p>
 
-<p>People who are really serious about software should make their own hardware — Alan Kay</p>
+<p class="quote">People who are really serious about software should make their own hardware — Alan Kay</p>
 
       </section>
 
@@ -68,8 +77,6 @@
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
       </footer>
 
     </div>
