Added github.raw path to image

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@ Tangerine">
         <h3>
 <a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng. Klub at UOIT &amp; DC</h3>
 
-<div class="banner"><img src="images/software-electronics-heroes.gif"></div>
+<div class="banner"><img src="https://raw.githubusercontent.com/seekuoitdc/seekuoitdc.github.io/gh-pages/images/software-electronics-heroes.gif"></div>
 
 <p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020 and <strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</p>
 
