--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Seekuoitdc.github.io</h1>
-            <h2>Website (viewable at seekuoitdc.github.io in your browser) of Software and Electrical Engineering Klub at UOIT DC.</h2>
+            <h2>Free workshops, resources by student club on campus for Embedded Systems, FPGA, Arduino, Raspberry Pi, Digital and Analog Design, Firmware and Device Drivers, Software Engineering</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -48,16 +48,16 @@
         <h3>
 <a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng Klub at UOIT &amp; DC</h3>
 
-<p>We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays, 11:30 a.m. - 1:30 p.m.</strong> and <strong>Wednesdays, 11:30 a.m. - 1:30 p.m., 2:10 p.m - 6:10 p.m.</strong></p>
+<p><img src="images/software-electronics-heroes.gif" alt="famous electrical engineers">
+We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE4020 and <strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE2040, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</p>
 
-<p>Our and partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
+<p>All our and our partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
 <p>Any part you need but <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> or <a href="#">McNaughton Center</a> does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
 <p>Our team is always there for you. Please contact SEEK's Exec. <em><a href="mailto:SagarMonkeyBoy@gmail.com">SagarMonkeyBoy@gmail.com</a></em> with your questions.</p>
 
 <p>People who are really serious about software should make their own hardware — Alan Kay</p>
-
       </section>
 
       <footer>
