Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Seekuoitdc.github.io</h1>
-            <h2>Free workshops, resources by student club on campus for Embedded Systems, FPGA, Arduino, Raspberry Pi, Digital and Analog Design, Firmware and Device Drivers, Software Engineering</h2>
+            <h2>Software Electrical Engineering Club at DC UOIT - A Student Design Engineering Club at DC and UOIT</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -46,14 +46,21 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng Klub at UOIT &amp; DC</h3>
+<a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng. Klub at UOIT &amp; DC</h3>
 
 <p><img src="images/software-electronics-heroes.gif" alt="famous electrical engineers">
-We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics hacker/maker workbench</a>. We hold meetings every week: <strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE4020 and <strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE2040, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</p>
+We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics workbench</a> used by makers and busy engineers. We hold meetings every week:</p>
 
-<p>All our and our partners' prototyping library at <a href="#">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> are used <strong>for free</strong> during club meetings.The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
+<ul>
+<li>
+<strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE4020</li>
+<li>
+<strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE2040</li>
+<li>
+<strong>Wednesdays</strong>, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</li>
+</ul><p>We give you electronics prototyping parts, tools, and collaborate with partners who do the same. See what the EE maker and prototyping library at <a href="https://docs.google.com/spreadsheets/d/16WL_NKTxxhU5NL4flWcO3onCrfHl0LCvcAJNRAw46vY/edit?usp=sharing">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing">SEEK</a> have. They are used <strong>for free</strong> during club meetings. The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, embedded systems kits, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
-<p>Any part you need but <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing#gid=0">SEEK</a> or <a href="#">McNaughton Center</a> does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
+<p>Any part you need but SEEK or McNaughton Center does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
 <p>Our team is always there for you. Please contact SEEK's Exec. <em><a href="mailto:SagarMonkeyBoy@gmail.com">SagarMonkeyBoy@gmail.com</a></em> with your questions.</p>
 
