Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Seekuoitdc.github.io</h1>
-            <h2>Software Electrical Engineering Club at DC UOIT - A Student Design Engineering Club at DC and UOIT</h2>
+            <h2>A Student Design Engineering Club at DC and UOIT</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
