--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Seekuoitdc.github.io by seekuoitdc</title>
+    <title>UOIT DC Software Electrical Engineering Club</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Seekuoitdc.github.io</h1>
+            <h1>SEEK UOIT DC</h1>
             <h2>A Student Design Engineering Club at UOIT and DC</h2>
           </span>
           <span class="left-tail"></span>
