Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>UOIT DC Software Electrical Engineering Club</title>
+    <title>Seekuoitdc.github.io by seekuoitdc</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>SEEK UOIT DC</h1>
+            <h1>Seekuoitdc.github.io</h1>
             <h2>A Student Design Engineering Club at UOIT and DC</h2>
           </span>
           <span class="left-tail"></span>
@@ -53,9 +53,9 @@ We give you access to student run library of electronics prototyping parts, boar
 
 <ul>
 <li>
-<strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE4020</li>
+<strong>Tuesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020</li>
 <li>
-<strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE2040</li>
+<strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020</li>
 <li>
 <strong>Wednesdays</strong>, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</li>
 </ul><p>We give you electronics prototyping parts, tools, and collaborate with partners who do the same. See what the EE maker and prototyping library at <a href="https://docs.google.com/spreadsheets/d/16WL_NKTxxhU5NL4flWcO3onCrfHl0LCvcAJNRAw46vY/edit?usp=sharing">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing">SEEK</a> have. They are used <strong>for free</strong> during club meetings. The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, embedded systems kits, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
