--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Seekuoitdc.github.io by seekuoitdc</title>
+    <title>SEEK at UOIT and DC by seekuoitdc</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Seekuoitdc.github.io</h1>
+            <h1>SEEK at UOIT and DC</h1>
             <h2>A Student Design Engineering Club at UOIT and DC</h2>
           </span>
           <span class="left-tail"></span>
@@ -58,7 +58,9 @@ We give you access to student run library of electronics prototyping parts, boar
 <strong>Wednesdays</strong>, 11:30 a.m. - 1:30 p.m. at ACE 4020</li>
 <li>
 <strong>Wednesdays</strong>, 2:10 p.m - 6:10 p.m. at SA Clubs' Space (near security desk in Gordon Wiley Bldg.)</li>
-</ul><p>We give you electronics prototyping parts, tools, and collaborate with partners who do the same. See what the EE maker and prototyping library at <a href="https://docs.google.com/spreadsheets/d/16WL_NKTxxhU5NL4flWcO3onCrfHl0LCvcAJNRAw46vY/edit?usp=sharing">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing">SEEK</a> have. They are used <strong>for free</strong> during club meetings. The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, embedded systems kits, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
+</ul>
+
+<p>We give you electronics prototyping parts, tools, and collaborate with partners who do the same. See what the EE maker and prototyping library at <a href="https://docs.google.com/spreadsheets/d/16WL_NKTxxhU5NL4flWcO3onCrfHl0LCvcAJNRAw46vY/edit?usp=sharing">McNaughton Center</a> and at <a href="https://docs.google.com/a/uoit.net/spreadsheet/ccc?key=0AqilyhblBuNKdGxlYXhlMTB0RVVzbFBOdmRoeHZHblE&amp;usp=sharing">SEEK</a> have. They are used <strong>for free</strong> during club meetings. The tools and parts consist of, just to mention a few: high end oscilloscopes, solder stations, embedded systems kits, FPGA boards, analog actives and passives, arduino and raspberry pi kits, and more. Make sure you checkout parts; use them to make real world products right away by following <a href="http://nextproject.ca/pages.php?p=students">our tutorials</a>.</p>
 
 <p>Any part you need but SEEK or McNaughton Center does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
