--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>SEEK at UOIT and DC by seekuoitdc</title>
+    <title>SEEK at UOIT and DC</title>
   </head>
 
   <body>
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>SEEK at UOIT and DC</h1>
-            <h2>A Student Design Engineering Club at UOIT and DC</h2>
+            <h1>Funding and Mentoring</h1>
+            <h2>Student EE and SE Prototypes</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
