--- a/index.html
+++ b/index.html
@@ -72,13 +72,11 @@ We give you access to student run library of electronics prototyping parts, boar
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/seekuoitdc">seekuoitdc</a> can be found on <a href="https://github.com/seekuoitdc">GitHub</a></p>
+            <p>Projects by members of SEEK <a href="http://nextproject.ca/pages.php?p=students">NextProject</a> documentation library, which is sponsored by <a href="https://www.youtube.com/user/ecseuoit">Dept. of Electrical, Computer and Software Engineering</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
       </footer>
 
     </div>
