--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ We give you access to student run library of electronics prototyping parts, boar
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by members of SEEK <a href="http://nextproject.ca/pages.php?p=students">NextProject</a> documentation library, which is sponsored by <a href="https://www.youtube.com/user/ecseuoit">Dept. of Electrical, Computer and Software Engineering</a></p>
+            <p>PROJECTS BY SEEK MEMBERS ARE AT<a href="http://nextproject.ca/pages.php?p=students">NextProject</a><BR />
+            SONSORED BY <a href="https://www.youtube.com/user/ecseuoit">Dept. of Electrical, Computer and Software Engineering</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
