--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@ We give you access to student run library of electronics prototyping parts, boar
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>PROJECTS BY SEEK MEMBERS ARE AT<a href="http://nextproject.ca/pages.php?p=students">NextProject</a><BR />
-            SONSORED BY <a href="https://www.youtube.com/user/ecseuoit">Dept. of Electrical, Computer and Software Engineering</a></p>
+            <p>PROJECTS BY SEEK MEMBERS ARE AT <a href="http://nextproject.ca/pages.php?p=students">NextProject</a><br />
+            SONSORED BY <a href="https://www.youtube.com/user/ecseuoit">Dept. of ECSE</a><br />
+              Faculty of Engineering and Applied Sciences, UOIT
+            </p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
