--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ We give you access to student run library of electronics prototyping parts, boar
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by SEEK Members <a href="http://nextproject.ca/pages.php?p=students">NextProject</a><br />
+            <p>Projects by SEEK Members are at <a href="http://nextproject.ca/pages.php?p=students">NextProject</a><br />
             Sponsored by <a href="https://www.youtube.com/user/ecseuoit">Dept. of ECSE</a><br />
               Faculty of Engineering and Applied Sciences, UOIT
             </p>
