--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ We give you access to student run library of electronics prototyping parts, boar
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <p>Projects by SEEK Members are at <a href="http://nextproject.ca/pages.php?p=students">NextProject</a><br />
-            Sponsored by <a href="https://www.youtube.com/user/ecseuoit">Dept. of ECSE</a><br />
+            Sponsored by <a href="https://www.youtube.com/user/ecseuoit">Dept. of ECSE</a> &amp; <a href="http://www.your-sa.ca/">SA</a><br />
               Faculty of Engineering and Applied Sciences, UOIT
             </p>
           </span>
