--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ We give you access to student run library of electronics prototyping parts, boar
 
 <p>Any part you need but SEEK or McNaughton Center does not carry, send SEEK's exec. <em><a href="mailto:dhimiter.qendri@uoit.net">dhimiter.qendri@uoit.net</a></em> a 4 sentence e-mail with "what is it's name and part number, where can it be bought, how much is it, why needed". We will buy those parts and lend them to you as soon as possible at club meetings.</p>
 
-<p>Our team is always there for you. Please contact SEEK's Exec. <em><a href="mailto:SagarMonkeyBoy@gmail.com">SagarMonkeyBoy@gmail.com</a></em> with your questions.</p>
+<p>Our team is always there for you. Please contact SEEK's Executives <em><a href="mailto:Michael.Lescisin@uoit.net">Michael.Lescisin@uoit.net</a></em> or <em><a href="mailto:Ahmad.Touseef@uoit.net">Ahmad.Tousef@uoit.net</a></em> with your questions.</p>
 
 <p>People who are really serious about software should make their own hardware — Alan Kay</p>
       </section>
