--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <a name="welcome-to-software--electrical-eng-klub-at-uoit--dc" class="anchor" href="#welcome-to-software--electrical-eng-klub-at-uoit--dc"><span class="octicon octicon-link"></span></a>Welcome to Software &amp; Electrical Eng. Klub at UOIT &amp; DC</h3>
 
 <p><img src="images/software-electronics-heroes.gif" alt="famous electrical engineers">
-We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg)">electronics workbench</a> used by makers and busy engineers. We hold meetings every week:</p>
+We give you access to student run library of electronics prototyping parts, boards, tools and instruments. All parts together at a desk will look like a professional <a href="http://casperelectronics.com/images/TheWorkbench.jpg">electronics workbench</a> used by makers and busy engineers. We hold meetings every week:</p>
 
 <ul>
 <li>
